--- a/nodes/text/text.css
+++ b/nodes/text/text.css
@@ -1,9 +1,17 @@
 /* Textish Styles
 -------------------------------------------------------------------------------*/
 
+/* Is this necessary in view mode? */
 
 .content-node.text .content {
   white-space: pre-wrap;
   white-space: -moz-pre-wrap;
   white-space: -pre-wrap;
+}
+
+
+/* When rendered in main panel */
+.document .content-node.text {
+  padding: 20px 60px;
+  padding-left: 100px;
 }
