--- a/nodes/codeblock/codeblock.css
+++ b/nodes/codeblock/codeblock.css
@@ -2,9 +2,6 @@
 -------------------------------------------------------------------------------*/
 
 .content-node.codeblock {
-  /*background: #f5f5f5;*/
-  border: 1px dashed #ddd;
-  margin-bottom: 20px;
   line-height: 20px;
   padding: 10px 10px;
 }
@@ -15,3 +12,10 @@
   color: #777;
   min-height: 28px;
 }
+
+.content-node.codeblock {
+  padding: 20px 60px;
+  padding-left: 100px;
+}
+
+
