--- a/article.css
+++ b/article.css
@@ -13,9 +13,9 @@
 }
 
 
-/*
-Main content panel
---------------------------------------- */
+
+/* Main content panel 
+======================================================================= */
 
 
 .article .document {
@@ -43,19 +43,126 @@ Main content panel
 }
 
 
-/*
-Resources Panel 
---------------------------------------- */
+/* Resources Panel 
+======================================================================= */
 
 .article .resources {
   float: right;
   line-height: 20px;
-  width: 45%;
+  width: 43%;
   background: #F5F5F5;
   height: 100%;
   position: relative;
   overflow: hidden;
 }
+
+.article .resources .content-node.resource {
+  color: #333;
+  position: relative;
+  background: #EBEBEB;
+  margin-bottom: 30px;
+  margin-right: 20px;
+  padding: 0px;
+}
+
+.article .resources .content-node.resource .resource-header:hover {
+  background: rgba(0,0,0,0.05);
+}
+
+/* Clickable header */
+
+.article .resources .content-node.resource .resource-header {
+  min-height: 80px;
+  background: rgba(0,0,0,0.02);
+  cursor: pointer;
+}
+
+
+
+/* Shared styles for selected and mouseover states
+----------------------------------------------------------------------- */
+
+
+.article .resources .publication.view .content-node.resource.active .resource-header {
+  background: rgba(11, 157, 217, 1);
+  color: #fff;
+}
+
+.article .resources .figure.view .content-node.resource.active .resource-header {
+  background: rgba(145, 187, 4, 1);
+  color: #fff;
+}
+
+.article .resources .info.view .content-node.resource.active .resource-header {
+  background: #5c6570;
+  color: #fff;
+}
+
+.article .resources .content-node.resource.active .resource-header:hover {
+  opacity: 0.9;
+}
+
+
+.article .resources .content-node.resource.active .resource-header .name {
+  color: #fff;
+}
+
+.article .resources .content-node.resource.active .resource-header .reference-count {
+  color: rgba(255,255, 255, 0.7);
+}
+
+
+
+.article .resources .content-node .type {
+  position: absolute;
+  right: 10px;
+  top: 0px;
+  height: 35px;
+  width: 120px;
+  text-align: center;
+  background: rgba(0,0,0,0.05);
+  font-size: 12px;
+  padding: 0 15px;
+  line-height: 35px;
+  font-weight: bold;
+  color: rgba(0,0,0, 0.5);
+}
+
+
+.article .resources .content-node .type i {
+  padding-right: 10px;
+}
+
+.article .resources .content-node.publication.active .type {
+  color: white;
+}
+
+.article .resources .content-node.active .type {
+  color: white;
+}
+
+
+
+
+.article .resources .number {
+  font-size: 11px;
+  position: absolute;
+  text-align: center;
+  color: #fff;
+  left: 25px;
+  top: 25px;
+  font-weight: bold;
+  width: 24px;
+  line-height: 24px;
+  border-radius: 12px;
+  background: rgba(0,0,0, 0.3);
+}
+
+.article .resources .publication.active .number {
+  background: rgba(11, 157, 217, 1);
+}
+
+
 
 .article .resources .surface.figures {
   position: absolute;
@@ -79,21 +186,24 @@ Resources Panel
 }
 
 
-.article .resources .resources-header {
-  display: none;
-  position: fixed;
-  font-weight: bold;
-  font-size: 14px;
-  top: 80px;
-  height: 40px;
-  line-height: 40px;
+/* Consistent Resource Header for figures captions and person cards 
+----------------------------------------------------------------------- */
+
+
+.article .resources .resource-header .name {
+  font-family: 'Avenir LT W01 85 Medium', 'Montserrat', 'Source Sans Pro';
+  font-size: 16px;
+  
+  margin-right: 120px;
+  line-height: 21px;
+  color: #222;
+  padding: 10px 20px;
 }
 
 .article .resources .resources-header a {
   font-weight: bold;
   color: black;
 }
-
 
 .article .resources .content-node .reference-count {
   font-size: 13px;
@@ -105,8 +215,13 @@ Resources Panel
   text-align: right;
 }
 
-/* Annotations
--------------------------------------------------------------------------------*/
+
+
+
+
+/* Annotations 
+----------------------------------------------------------------------- */
+
 
 .article span.annotation {
   -webkit-transition-property: background, color;
