--- a/nodes/figure/image/image.css
+++ b/nodes/figure/image/image.css
@@ -1,33 +1,28 @@
 /* Image Node
 -------------------------------------------------------------------------------*/
 
-.content-node.image { }
+.content-node.image {
+}
 
 
 .content-node.image .content {
   padding: 0px;
 }
 
-/*.content-node.image div.image-char {
-}*/
-
-/*.content-node.image div.selected .overlay {
-  position: absolute;
-  top: 0px;
-  bottom: 0px;
-  left: 0px;
-  right: 0px;
-  background: rgba(0,169, 255, 0.25);
-}*/
 
 .content-node.image .image-wrapper {
+  padding: 20px;
+  background: #fff;
+}
+
+.content-node.image .caption {
+  background: #fff;
   padding: 20px;
 }
 
 .content-node.image div img {
   width: 100%;
 }
-
 
 /* When rendered in main panel */
 .document .content-node.image {
