--- a/nodes/heading/heading.css
+++ b/nodes/heading/heading.css
@@ -28,6 +28,10 @@
   font-size: 14px;
 }
 
+.content-node.heading.level-4 .content {
+  font-size: 14px;
+}
+
 
 .document .content-node.heading {
   font-size: 24px;
